--- a/app/src/main/res/layout/activity_alert.xml
+++ b/app/src/main/res/layout/activity_alert.xml
@@ -1,9 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.lenovo.preghelp.alert">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="15dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="0dp"
+            android:text="Hospital"
+            android:id="@+id/Station1"
+            android:textSize="22dp" />
+
+        <ImageButton
+            android:id="@+id/Call1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00cc00"
+            android:clickable="true"
+            android:onClick="call_num"
+            android:padding="5dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="0dp"
+            android:text="Hospital"
+            android:id="@+id/Station2"
+            android:textSize="22dp" />
+
+        <ImageButton
+            android:id="@+id/Call2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00cc00"
+            android:clickable="true"
+            android:onClick="call_num"
+            android:padding="5dp" />
+
+        <TextView
+            android:id="@+id/Station3"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="Hospital"
+            android:textSize="22dp" />
+
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/Call3"
+            android:onClick="call_num"
+            android:backgroundTint="#00cc00"
+            android:clickable="true"
+            android:padding="5dp" />
+    </LinearLayout>
+
+
+</RelativeLayout>
