--- a/app/src/main/res/layout/activity_alert.xml
+++ b/app/src/main/res/layout/activity_alert.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     tools:context="com.example.lenovo.preghelp.alert">
 
     <LinearLayout
@@ -19,15 +20,6 @@
             android:id="@+id/Station1"
             android:textSize="22dp" />
 
-        <ImageButton
-            android:id="@+id/Call1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#00cc00"
-            android:clickable="true"
-            android:onClick="call_num"
-            android:padding="5dp"/>
-
         <TextView
             android:layout_width="match_parent"
             android:layout_weight="1"
@@ -35,15 +27,6 @@
             android:text="Hospital"
             android:id="@+id/Station2"
             android:textSize="22dp" />
-
-        <ImageButton
-            android:id="@+id/Call2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#00cc00"
-            android:clickable="true"
-            android:onClick="call_num"
-            android:padding="5dp" />
 
         <TextView
             android:id="@+id/Station3"
@@ -53,15 +36,6 @@
             android:text="Hospital"
             android:textSize="22dp" />
 
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/Call3"
-            android:onClick="call_num"
-            android:backgroundTint="#00cc00"
-            android:clickable="true"
-            android:padding="5dp" />
     </LinearLayout>
-
 
 </RelativeLayout>
