--- a/app/src/main/res/layout/activity_cameracapture.xml
+++ b/app/src/main/res/layout/activity_cameracapture.xml
@@ -12,18 +12,21 @@
         android:id="@+id/imageView2"
         android:scaleType="centerCrop"
         android:layout_below="@+id/button"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageView2"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="17dp"
         android:text="Track A Medicine"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/button"
+        android:layout_toStartOf="@+id/button"
+        android:layout_marginRight="77dp"
+        android:layout_marginEnd="77dp" />
 
     <Button
         android:id="@+id/button"
@@ -31,7 +34,7 @@
         android:layout_height="wrap_content"
         android:text="click"
         android:layout_marginTop="64dp"
-        android:layout_below="@+id/textView2"
+
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
