--- a/app/src/main/res/layout/activity_speak.xml
+++ b/app/src/main/res/layout/activity_speak.xml
@@ -11,12 +11,14 @@
     <TextView
         android:id="@+id/tv1"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="TextView"
-        android:layout_alignParentTop="true"
+        android:layout_height="130dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="36dp" />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="22dp"
+        android:text=" "
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <!--<EditText-->
         <!--android:id="@+id/edit_text"-->
